# tinyrenderer

./: .clang-format  .gitignore  CMakeLists.txt  CompilerWarnings.cmake  IShader.cpp  IShader.h  Makefile  Shader.cpp  Shader.h  StandardProjectSettings.cmake  TGAColor.cpp  TGAColor.h  TGA_Header.h  geometry.cpp  geometry.h  main.cpp  model.cpp  model.h  our_gl.cpp  our_gl.h  tgaimage.cpp  tgaimage.h
